--- a/index.html
+++ b/index.html
@@ -27,25 +27,48 @@
                 <nav class="navbar">
                     <ul class="navbar__list">
                         <li class="navbar__list-item">
-                            <a href="" class="navbar__list-item-link">Home</a>
+                            <a href="" class="navbar__list-item-link">
+                                <span class="navbar__list-item-text">Home</span>
+                            </a>
                         </li>
                         <li class="navbar__list-item">
-                            <a href="" class="navbar__list-item-link">Page</a>
+                            <a href="" class="navbar__list-item-link">
+                                <span class="navbar__list-item-text">Page</span>
+                            </a>
+                            <div class="navbar__sub-menu">
+                                <ul class="navbar__sub-menu-list">
+                                    <li>
+                                        <a href="">
+                                            <span>Travel Angency</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                         <li class="navbar__list-item">
-                            <a href="" class="navbar__list-item-link">Destination</a>
+                            <a href="" class="navbar__list-item-link">
+                                <span class="navbar__list-item-text">Destination</span>
+                            </a>
                         </li>
                         <li class="navbar__list-item">
-                            <a href="" class="navbar__list-item-link">Tours</a>
+                            <a href="" class="navbar__list-item-link">
+                                <span class="navbar__list-item-text">Tours</span>
+                            </a>
                         </li>
                         <li class="navbar__list-item">
-                            <a href="" class="navbar__list-item-link">Blog</a>
+                            <a href="" class="navbar__list-item-link">
+                                <span class="navbar__list-item-text">Blog</span>
+                            </a>
                         </li>
                         <li class="navbar__list-item">
-                            <a href="" class="navbar__list-item-link">Shop</a>
+                            <a href="" class="navbar__list-item-link">
+                                <span class="navbar__list-item-text">Shop</span>
+                            </a>
                         </li>
                         <li class="navbar__list-item">
-                            <a href="" class="navbar__list-item-link">Elements</a>
+                            <a href="" class="navbar__list-item-link">
+                                <span class="navbar__list-item-text">Elements</span>
+                            </a>
                         </li>
                     </ul>
                 </nav>
