--- a/index.html
+++ b/index.html
@@ -30,20 +30,30 @@
                             <a href="" class="navbar__list-item-link">
                                 <span class="navbar__list-item-text">Home</span>
                             </a>
+                            <div class="navbar__sub-menu">
+                                <ul class="navbar__sub-menu-list">
+                                    <li class="navbar__sub-menu-list-item">
+                                        <a href="" class="navbar__sub-menu-list-item-link">
+                                            <span class="navbar__sub-menu-list-item-text">Travel Angency</span>
+                                        </a>
+                                    </li>
+                                    <li class="navbar__sub-menu-list-item">
+                                        <a href="" class="navbar__sub-menu-list-item-link">
+                                            <span class="navbar__sub-menu-list-item-text">Travel Angency</span>
+                                        </a>
+                                    </li>
+                                    <li class="navbar__sub-menu-list-item">
+                                        <a href="" class="navbar__sub-menu-list-item-link">
+                                            <span class="navbar__sub-menu-list-item-text">Travel Angency</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                         <li class="navbar__list-item">
                             <a href="" class="navbar__list-item-link">
                                 <span class="navbar__list-item-text">Page</span>
                             </a>
-                            <div class="navbar__sub-menu">
-                                <ul class="navbar__sub-menu-list">
-                                    <li>
-                                        <a href="">
-                                            <span>Travel Angency</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
                         </li>
                         <li class="navbar__list-item">
                             <a href="" class="navbar__list-item-link">
