--- a/index.html
+++ b/index.html
@@ -482,11 +482,16 @@
                         <line stroke-width="1.5" stroke-miterlimit="10" x1="5.3" y1="15.2" x2="0.6" y2="19.4"></line>
                     </svg>
                     <div class="overlay-search">
-                        <div class="navbar__search-overlay">
-                            <input class="navbar__search-overlay-input" type="text" placeholder="Search...">
-                            <button class="btn search-btn-large">
-                                find now
-                            </button>
+                        <div class="overlay-search-icon-times">
+                            <i class="fas fa-times"></i>
+                        </div>
+                        <div class="overlay-search-form-wrap">
+                            <div class="navbar__search-overlay">
+                                <input class="navbar__search-overlay-input" type="text" placeholder="Search...">
+                                <button class="btn search-btn-large">
+                                    find now
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
