--- a/index.html
+++ b/index.html
@@ -1122,13 +1122,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="slider__btn-previous-wrap">
-                        <div class="slider__btn-previous">
+                    <div class="slider__btn-wrap slider__btn-previous">
+                        <div class="slider__btn-item">
                             <i class="fas fa-chevron-left"></i>
                         </div>
                     </div>
-                    <div class="slider__btn-next-wrap">
-                        <div class="slider__btn-next">
+                    <div class="slider__btn-wrap slider__btn-next">
+                        <div class="slider__btn-item">
                             <i class="fas fa-chevron-right"></i>
                         </div>
                     </div>
@@ -2029,8 +2029,8 @@
             <footer>
                 <div class="grid wide">
                     <div class="row ">
-                        <div class="col l-3 m-6 c-12">
-                            <div class="footer__company-info ">
+                        <div class="col l-3 m-6 c-12 footer__item-wrap">
+                            <div class="footer__item">
                                 <div class="footer__company-logo-wrap">
                                     <img src="./assets/img/logo-footer.png" alt="" class="footer__company-logo">
                                 </div>
@@ -2053,8 +2053,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col l-3 m-6 c-12">
-                            <div class="footer__recent-post">
+                        <div class="col l-3 m-6 c-12 footer__item-wrap">
+                            <div class="footer__item">
                                 <div class="footer__title">
                                     <h4 class="footer__title-item">
                                         Our Recent Posts         
@@ -2086,32 +2086,34 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col l-3 m-6 c-12">
-                            <div class="footer__subcribe-letter">
-                                <div class="footer__title">
-                                    <h4 class="footer__title-item">
-                                        Subscribe to our Newsletter         
-                                    </h4>
-                                    <p class="footer__title-p">
-                                        Etiam rhoncus. Maecenas temp us, tellus eget condimentum rho
-                                    </p>
+                        <div class="col l-3 m-6 c-12 footer__item-wrap">
+                            <div class="footer__item">
+                                <div class="footer__subcribe-letter">
+                                    <div class="footer__title">
+                                        <h4 class="footer__title-item">
+                                            Subscribe to our Newsletter         
+                                        </h4>
+                                        <p class="footer__title-p">
+                                            Etiam rhoncus. Maecenas temp us, tellus eget condimentum rho
+                                        </p>
+                                    </div>
                                 </div>
+                                <form class="footer__subcribe-letter-form">
+                                    <div class="footer__subcribe-letter-input">
+                                        <i class="fas fa-user"></i>
+                                        <input type="text" placeholder="Name">
+                                    </div>
+                                    <div class="footer__subcribe-letter-input">
+                                        <i class="fas fa-envelope footer__subcribe-padding-icon"></i>
+                                        <input type="text" placeholder="Email">
+                                    </div>
+                                    <button class="btn btn-large footer__subcribe-btn">
+                                        subcribe</button>
+                                </form>
                             </div>
-                            <form class="footer__subcribe-letter-form">
-                                <div class="footer__subcribe-letter-input">
-                                    <i class="fas fa-user"></i>
-                                    <input type="text" placeholder="Name">
-                                </div>
-                                <div class="footer__subcribe-letter-input">
-                                    <i class="fas fa-envelope footer__subcribe-padding-icon"></i>
-                                    <input type="text" placeholder="Email">
-                                </div>
-                                <button class="btn btn-large footer__subcribe-btn">
-                                    subcribe</button>
-                            </form>
                         </div>
-                        <div class="col l-3 m-6 c-12">
-                            <div class="footer__company-social">
+                        <div class="col l-3 m-6 c-12 footer__item-wrap">
+                            <div class="footer__item">
                                 <div class="footer__title">
                                     <h4 class="footer__title-item">
                                         Our Instagram         
